<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, test</string>
    <string name="app_name">Fall Aware</string>
    <string name="notifier">notification</string>

    <string name="default_value_sensi_preference">Medium</string>
    <string name="title_sensi_preference">Detection Sensitivity Level</string>
    <string name="summary_sensi_preference">Setting the degree of sensitivity</string>
    <string name="dialog_title_sensi_preference">Select Level</string>

    <string name="default_value_phone_preference"></string>
    <string name="title_phone_preference">Phone Number</string>
    <string name="summary_phone_preference">The phone number to send SMS</string>
    <string name="dialog_title_alarminfo_preference">Enter Information</string>

    <string name="default_value_sound_preference">one</string>
    <string name="title_sound_preference">Sound</string>
    <string name="summary_sound_preference">Setting the alarm sound</string>
    <string name="dialog_title_sound_preference">Select</string>

    <string name="default_value_delay_preference">30</string>
    <string name="title_delay_preference">Delay</string>
    <string name="summary_delay_preference">The delay between detection and sending SMS (s)</string>
    <string name="dialog_title_delay_preference">Enter Delay (s)</string>

    <string name="title_checkbox_preference">Vibrate</string>
    <string name="summary_checkbox_preference">Setting to vibrate or not</string>

    <string name="first_preferences_category">Detection Preferences</string>
    <string name="second_preferences_category">Prompt Preferences</string>

    <string name="NotYet">To trigger another action!\nNot implemented yet...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
