<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#334445">

	<PreferenceCategory 
		    android:title="@string/first_preferences_category">
    <ListPreference
            android:key="default_Sensitivity"
            android:defaultValue="@string/default_value_sensi_preference"
            android:title="@string/title_sensi_preference"
            android:summary="@string/summary_sensi_preference"
            android:entries="@array/entries_sensi_preference"
            android:entryValues="@array/entryvalues_sensi_preference"
            android:dialogTitle="@string/dialog_title_sensi_preference" /> 

    </PreferenceCategory>
          
	<PreferenceCategory  
		    android:title="@string/second_preferences_category">

        <EditTextPreference
            android:key="default_Phone"
            android:inputType="number"
            android:defaultValue="@string/default_value_phone_preference"
            android:title="@string/title_phone_preference"
            android:summary="@string/summary_phone_preference"
            android:dialogTitle="@string/dialog_title_alarminfo_preference" />

        <EditTextPreference
            android:inputType="number"
            android:key="default_Delay"
            android:defaultValue="@string/default_value_delay_preference"
            android:title="@string/title_delay_preference"
            android:summary="@string/summary_delay_preference"
            android:dialogTitle="@string/dialog_title_delay_preference" />

    <ListPreference
            android:key="default_Sound"
            android:defaultValue="@string/default_value_sound_preference"
            android:title="@string/title_sound_preference"
            android:summary="@string/summary_sound_preference"
            android:entries="@array/entries_sound_preference"
            android:entryValues="@array/entryvalues_sound_preference"
            android:dialogTitle="@string/dialog_title_sound_preference" />    
   
    <CheckBoxPreference
            android:key="default_Vibrate"
            android:defaultValue="true"
            android:title="@string/title_checkbox_preference"
            android:summary="@string/summary_checkbox_preference" />

    </PreferenceCategory>            

</PreferenceScreen>
<!-- android:background="@drawable/blue" 
   <Button android:id="@+id/OK_Button"
   		  android:layout_gravity="bottom|center_horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Show Sensor Value"/>  -->
